# audittrail

./: .env.example  .gitignore  DEPLOYMENT.md  docker-compose.override.yml  docker-compose.yml
.planning/: STATE.md  (+3 more)
server/: Dockerfile  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 001_create_users_table.py  002_create_audit_types_table.py  003_create_cases_table.py  004_create_events_table.py  005_create_file_batches_table.py  005_create_jira_field_mappings_table.py
server/scripts/: entrypoint.sh
server/src/: config.py  database.py  deps.py  main.py
server/src/models/: __init__.py  audit_type.py  case.py  event.py  file_batch.py  jira_field_mapping.py  user.py
server/src/routers/: audit_types.py  auth.py  cases.py  events.py  file_batches.py  imports.py  jira.py  reports.py  users.py
server/src/schemas/: audit_type.py  case.py  event.py  file_batch.py  import_.py  jira.py  report.py  user.py
server/src/scripts/: seed.py
server/src/services/: html_report.py  import_parser.py  jira_scraper.py  report_generator.py
server/src/templates/reports/: base.html  html_report.html  narrative.html  timeline.html
server/tests/: conftest.py  factories.py  test_audit_types_router.py  test_auth_router.py  test_case_validation.py  test_cases_router.py  test_deps.py  test_event_validation.py  test_events_router.py  test_file_batches_router.py  test_html_report.py  test_import_parser.py  test_imports_router.py  test_jira_router.py  test_jira_scraper_parse.py  test_reports_router.py  test_schemas.py  test_smoke.py  test_users_router.py
(+177 files in other folders)
